[metadata]
name = ECG
version = 0.0.1
author = ML Lab, ITMO
author_email = tpolevaya@itmo.ru
description = ECG recognition library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tanyapole/ECG
project_urls =
    Bug Tracker = https://github.com/tanyapole/ECG/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ECG
packages = find:
python_requires = >=3.7

[options.packages.find]
where = ECG