[metadata]
name = ECG
version = 0.0.1
author = ML Lab, ITMO
author_email = tpolevaya@itmo.ru
description = ECG recognition library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Med-AI-Lab/ECG
project_urls =
    Bug Tracker = https://github.com/Med-AI-Lab/ECG/issues
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    ECG = ECG
packages = find:
python_requires = >=3.7
include_package_data = True

# [options.packages.find]
# where = ECG
